# RaspberryPi-Temperature-Monitoring-with-QML

./: .gitignore  CMakeLists.txt  README.md
GUI/MonitoringSystemGUI/: CMakeLists.txt  CustomDial.qml  CustomFrame.qml  main.cpp  monitorsystemdisplay.cpp  monitorsystemdisplay.h
GUI/build-MonitoringSystemGUI-Desktop_Qt_6_6_1_GCC_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt.prev  appMonitoringSystemGUI  appmonitoringsystemgui_qmltyperegistrations.cpp  build.ninja  cmake_install.cmake
GUI/build-MonitoringSystemGUI-Desktop_Qt_6_6_1_GCC_64bit-Debug/.qt/: QtDeploySupport.cmake
GUI/build-MonitoringSystemGUI-Desktop_Qt_6_6_1_GCC_64bit-Debug/.qt_plugins/: Qt6_QmlPlugins_Imports_appMonitoringSystemGUI.cmake  Qt6_QmlPlugins_Imports_appMonitoringSystemGUI.rsp
GUI/build-MonitoringSystemGUI-Desktop_Qt_6_6_1_GCC_64bit-Debug/.qtc_clangd/: compile_commands.json
GUI/build-MonitoringSystemGUI-Desktop_Qt_6_6_1_GCC_64bit-Debug/.rcc/: appMonitoringSystemGUI_raw_qml_0.qrc  qmake_MonitoringSystemGUI.qrc  qrc_appMonitoringSystemGUI_raw_qml_0.cpp  qrc_qmake_MonitoringSystemGUI.cpp
GUI/build-MonitoringSystemGUI-Desktop_Qt_6_6_1_GCC_64bit-Debug/MonitoringSystemGUI/: Main.qml  appMonitoringSystemGUI_qml_module_dir_map.qrc  qmldir
GUI/build-MonitoringSystemGUI-Desktop_Qt_6_6_1_GCC_64bit-Debug/appMonitoringSystemGUI_autogen/: deps  mocs_compilation.cpp
GUI/build-MonitoringSystemGUI-Desktop_Qt_6_6_1_GCC_64bit-Debug/meta_types/: appMonitoringSystemGUI_json_file_list.txt  (+2 more)
inc/: monitoring_system.hpp
scripts/: getCSV.sh
src/: main.cpp  monitoring_system.cpp
(+43 files in other folders)
